# bsr

./: .gitignore  .pdm-python  README.md  config.toml  main.py  network_data.json  pyproject.toml  seed_users.txt  session.json
docs/: scraping_elements.md
plans/: comprehensive_plan.md  planv1.1.md  planv1.md
scripts/: follows_network_scraper.py  network_scraper.py  profile_network_scraper copy.py
snippets/: following.html  posts.html  profile.html  profile_network_data.json
snippets/data/: network_data.json
src/: main.py
src/bsr.egg-info/: PKG-INFO  SOURCES.txt
src/core/: hive_mind.py  logger_config.py  session_manager.py
src/models/: models.py
src/pipeline/: post_task.py  profile_task.py  spider_task.py
